# obs-vnc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-format.yml  main.yml
ci/: forum-update-info.json
ci/linux/: build-ubuntu.sh  install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: archive-brew.py  build-libvncserver.sh  build-macos.sh  change-rpath.py  change-rpath.sh  gnutls-rm-bin.patch  install-build-obs-macos.sh  install-dependencies-macos.sh  install-libvncserver-arm64.sh  install-libvncserver-macos.sh  install-libvncserver-x86_64.sh  install-packagesbuild.sh  libvncserver.Brewfile  package-macos.sh  test-dylib.sh
ci/macos/gcc-aarch64-wrapper/: aarch64-apple-darwin20-g++  aarch64-apple-darwin20-gcc
ci/windows/: install-libvncserver.cmd  install-libvncserver.sh  package-windows.cmd  package-windows.sh  prepare-windows.cmd
cmake/: FindCairo.cmake  FindPango.cmake  FindPangocairo.cmake  FindPangoft2.cmake  FindPangowin32.cmake  ObsPluginHelpers.cmake
doc/: properties.md
installer/: installer-Windows.iss.in  installer-macOS.pkgproj.in
packaging/debian/: changelog  control  copyright  rules
src/: obs-vnc-source-main.c  obs-vnc-source-thread.c  obs-vnc-source.h  plugin-macros.h.in  vnc-source-main.c  vnc-source-thread.c  vnc-source.h
